k8s/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app-service
  namespace: bdc105
  labels:
    app: front-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: front-app
